relocate folders and files

--- a/src/styles/frontend.scss
+++ b/src/styles/frontend.scss
@@ -2,4 +2,4 @@
 @import "base/mixins.scss";
 @import "base/global";
 @import "modules/custom_styles";
-@import "modules/responsive";
+// @import "modules/responsive";
