Updated package.json and mixin files.

--- a/src/styles/frontend.scss
+++ b/src/styles/frontend.scss
@@ -1,5 +1,4 @@
 @import "base/variables";
-@import "base/mixins.scss";
+@import "../shared/mixins/mixins.scss";
 @import "base/global";
 @import "modules/custom_styles";
-// @import "modules/responsive";
