--- a/assets/styles/frontend.css
+++ b/assets/styles/frontend.css
@@ -1,77 +1,1 @@
-/*!*************************************************************************************************************************************************************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[3].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[3].use[2]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[3].use[3]!./src/styles/frontend.scss ***!
-  \*************************************************************************************************************************************************************************************************************************************************/
-.uvt_data_table {
-  list-style-type: none;
-  overflow: hidden;
-}
-.uvt_data_table li {
-  padding: 5px 2px 5px 5px;
-}
-.uvt_data_table li:nth-child(2n+1) {
-  background: #fbfbfb;
-}
-.uvt_data_table li:nth-child(2n) {
-  background: whitesmoke;
-}
-.uvt_data_table li a {
-  line-height: 32px;
-}
-.uvt_data_table li span {
-  display: block;
-  font-size: 14px;
-}
-
-.uvt_data_overlay {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: auto;
-}
-
-.uvt_data_overlay:after {
-  background: rgba(0, 0, 0, 0.5);
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 902px;
-  top: 0;
-  left: 0;
-  display: block;
-}
-
-.uvt_data_overlay:before {
-  position: absolute;
-  content: "";
-  width: 72px;
-  height: 72px;
-  left: 50%;
-  display: block;
-  top: 50%;
-  margin-left: -36px;
-  margin-top: -36px;
-  background-color: transparent;
-  background-image: url(../images/loader.1cc2feea.gif);
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-
-.uvt_pagination {
-  display: flex;
-  margin-top: 12px;
-  justify-content: space-between;
-  align-items: center;
-}
-.uvt_pagination a.uvt-btn-prev,
-.uvt_pagination a.uvt-btn-next {
-  color: #2c2c2c;
-  display: inline-block;
-  border: 1px solid #eee;
-  padding: 4px 12px;
-  font-size: 12px;
-}
-.uvt_pagination a.uvt-btn-next {
-  align-self: flex-end;
-}
-
-/*# sourceMappingURL=frontend.css.map*/
+.uvt_data_table{list-style-type:none;overflow:hidden}.uvt_data_table li{padding:5px 2px 5px 5px}.uvt_data_table li:nth-child(odd){background:#fbfbfb}.uvt_data_table li:nth-child(2n){background:#f5f5f5}.uvt_data_table li a{line-height:32px}.uvt_data_table li span{display:block;font-size:14px}.uvt_data_overlay{height:auto;overflow:hidden;position:relative;width:100%}.uvt_data_overlay:after{background:rgba(0,0,0,.5);content:"";display:block;height:902px;left:0;position:absolute;top:0;width:100%}.uvt_data_overlay:before{background-color:transparent;background-image:url(../images/loader.1cc2feea.gif);background-position:50%;background-repeat:no-repeat;content:"";display:block;height:72px;left:50%;margin-left:-36px;margin-top:-36px;position:absolute;top:50%;width:72px}.uvt_pagination{align-items:center;display:flex;justify-content:space-between;margin-top:12px}.uvt_pagination a.uvt-btn-next,.uvt_pagination a.uvt-btn-prev{border:1px solid #eee;color:#2c2c2c;display:inline-block;font-size:12px;padding:4px 12px}.uvt_pagination a.uvt-btn-next{align-self:flex-end}
