--- a/src/styles/modules/_custom_styles.scss
+++ b/src/styles/modules/_custom_styles.scss
@@ -29,37 +29,35 @@
   overflow: hidden;
   width: 100%;
   height: auto;
-}
 
-.uvt_data_overlay:after {
-  background: rgba(0, 0, 0, 0.5);
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 902px;
-  top: 0;
-  left: 0;
-  display: block;
+  &:after {
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 902px;
+    top: 0;
+    left: 0;
+    display: block;
+  }
+  &:before {
+    position: absolute;
+    content: "";
+    width: 72px;
+    height: 72px;
+    left: 50%;
+    display: block;
+    top: 50%;
+    margin-left: -36px;
+    margin-top: -36px;
+    background-color: transparent;
+    background-image: url("../images/loader.gif");
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
 }
-.uvt_data_overlay:before {
-  position: absolute;
-  content: "";
-  width: 72px;
-  height: 72px;
-  left: 50%;
-  display: block;
-  top: 50%;
-  margin-left: -36px;
-  margin-top: -36px;
-  background-color: transparent;
-  background-image: url("../images/loader.gif");
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-
 .uvt_pagination {
   display: flex;
-  // flex-direction: column;
   margin-top: 12px;
   justify-content: space-between;
   align-items: center;
